Sat Feb  5 15:18:25 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc: Upgrade to RDoc 3.5.2

Sat Feb  5 12:05:27 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/rubyext.c (syck_node_init_copy): SyckNode is not
	  copiable.  [ruby-core:35094]

Sat Feb  5 11:48:47 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl_cipher.c (ossl_cipher_alloc): leave data ptr
	  NULL.

	* ext/openssl/ossl_cipher.c (ossl_cipher_new, ossl_cipher_initialize):
	  allocate internal structure.  [ruby-core:35094]

	* ext/openssl/ossl_cipher.c (ossl_cipher_copy): ditto.

Sat Feb  5 11:29:10 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/json/parser/parser.h (GET_PARSER): raise TypeError.

	* ext/json/parser/parser.rl (cParser_initialize): ditto.

	* ext/json/parser/parser.h (GET_PARSER): check if initialized.
	  [ruby-core:35079]

	* ext/json/parser/parser.rl (cParser_initialize): ditto.

Sat Feb  5 10:09:31 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_get_expanded_load_path): always expand load paths.

Sat Feb  5 09:38:08 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* transcode.c (encoded_dup): extract.

Sat Feb  5 03:37:47 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (FileUtils::LowMethods): make low level methods
	  in NoWrite and DryRun to do nothing.  [ruby-dev:43129]

	* test/fileutils/fileasserts.rb: add message arguments.

	* test/fileutils/fileasserts.rb (Test::Unit::Assertions#assert_block):
	  show the given message.

Sat Feb  5 02:09:39 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (lex_getline, parser_set_encode): set encoding of lines
	  in SCRIPT_LINES__ as source encoding.  [ruby-dev:43168]

Sat Feb  5 02:08:37 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (ruby_thread_data_type): add prefix.

Sat Feb  5 00:59:54 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm_core.h (GetThreadPtr): use TypedData_Get_Struct() instead